--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Home"
 theme = "hugo-tranquilpeak-theme"
-disqusShortname = "hugo-tranquilpeak-theme"
+#disqusShortname = "hugo-tranquilpeak-theme"
 # googleAnalytics = "UA-123-45"
 paginate = 7
 canonifyurls = true
@@ -114,7 +114,7 @@ canonifyurls = true
   # -----------
   # Description
   # -----------
-  description = "Hugo tranquilpeak theme demo"
+  description = "Sohan Rai's blog"
 
   # ------------------
   # Syntax highlighter
@@ -341,23 +341,23 @@ canonifyurls = true
   # --------------
   # Comment system
   # --------------
-  [params.comment]
-    [params.comment.disqus]
-      enable = true
-      shortname = "hugo-tranquilpeak-theme"
-    [params.comment.gitalk]
-      enable = false
+  #[params.comment]
+  #  [params.comment.disqus]
+  #    enable = true
+  #    shortname = "hugo-tranquilpeak-theme"
+  #  [params.comment.gitalk]
+  #    enable = false
       # clientId =
       # clientSecret =
       # owner =
       # repo =
       # See all options: https://github.com/gitalk/gitalk#options
-      [params.comment.gitalk.options]
-        language = "en"
-        perPage = 10
-        distractionFreeMode = false
-        enableHotKey = true
-        pagerDirection = "first"
+  #    [params.comment.gitalk.options]
+  #      language = "en"
+  #      perPage = 10
+  #      distractionFreeMode = false
+  #      enableHotKey = true
+  #      pagerDirection = "first"
 
   # --------------------
   # Header configuration
