--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-tranquilpeak-theme"]
 	path = themes/hugo-tranquilpeak-theme
 	url = https://github.com/kakawait/hugo-tranquilpeak-theme.git
+[submodule "themes/hugo-tranquilpeak-theme2"]
+	path = themes/hugo-tranquilpeak-theme2
+	url = https://github.com/kakawait/hugo-tranquilpeak-theme.git
