--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ baseURL = "https://sohanrai09.github.io/new-blog"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Home"
-theme = "hugo-tranquilpeak-theme"
+theme = "hugo-tranquilpeak-theme2"
 #disqusShortname = "hugo-tranquilpeak-theme"
 # googleAnalytics = "UA-123-45"
 paginate = 7
